<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/gradient"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/placeholderlogo"/>

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="#40ffffff"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_profile"
                android:padding="8dp"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="#40ffffff"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="Email"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="#40ffffff"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="Password"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <Button
                android:id="@+id/bRegister"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_register2"
                android:clickable="true"
                android:padding="16dp"
                android:text="Sign Up"
                android:textStyle="bold"
                android:textColor="#3B5999" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#224080" />

            <TextView
                android:id="@+id/tvLoginLink"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:padding="8dp"
                android:text="Already have an account?"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_menu_account"
                android:drawablePadding="12dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>