...
        android:text="@string/forgot_your_password"
        android:textColor="@color/white" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:background="@drawable/button_white"
        android:id="@+id/bLogin"
        android:layout_below="@id/cbRememberMe"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:text="@string/log_in"
...
